fix(#19): fix elements alignment on spaces view

--- a/src/components/space-card/SpaceCard.scss
+++ b/src/components/space-card/SpaceCard.scss
@@ -1,7 +1,6 @@
 .space-card {
   width: 215px;
   height: 275px;
-  margin: $spacing-unit*2;
   transition-duration: 0.35s;
 
   &:deep() {
